syntax = "proto3";

package pb;
option go_package = "api/proto/user/pb";
import "user.proto";

service UserQueryService {
  rpc UserPage(UserPageRequest) returns (UserPageResponse) {}
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse) {}
}

message UserPageRequest { int32 page=1;int32 size=2; }

message UserPageResponse {
  int64 total_count = 1;
  repeated User edges = 2;
}

message UserInfoRequest { string id = 1; }

message UserInfoResponse { User user = 1; }